--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="SABRITER"
+                android:text="@string/myapp"
                 android:textColor="@color/white"
                 android:textSize="24sp"
                 android:fontFamily="sans-serif-medium"
@@ -30,24 +30,98 @@
 
         <LinearLayout
             android:id="@+id/form"
-            android:layout_width="match_parent"
+            android:layout_width="380dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:background="@color/blue2"
+            android:layout_marginTop="25dp"
             app:layout_constraintTop_toBottomOf="@id/topbar"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/title_logement"
+                    android:textSize="24sp"
+                    android:textColor="@color/white"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="16dp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/title_location"
+                    android:textSize="20sp"
+                    android:textColor="@color/white"
+                    android:layout_gravity="center"
+                    android:layout_marginEnd="70dp"
+                    android:layout_marginBottom="8dp"/>
+
                 <EditText
                     android:id="@+id/locationEditText"
-                    android:layout_width="200dp"
+                    android:layout_width="250dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:autofillHints="localisation"
+                    android:inputType="text"
+                    android:background="@drawable/editTexte_background"
+                    android:hint="@string/ask_location"
+                    android:layout_marginBottom="8dp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:hint="Entrer votre localisation" />
+                    android:text="@string/ask_max_budget"
+                    android:textSize="20sp"
+                    android:textColor="@color/white"
+                    android:layout_gravity="center"
+                    android:layout_marginEnd="50dp"
+
+                    android:layout_marginBottom="8dp"/>
 
                 <EditText
                     android:id="@+id/locationBudgetEditText"
-                    android:layout_width="200dp"
+                    android:layout_width="250dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:autofillHints="budget"
+                    android:inputType="number"
+                    android:background="@drawable/editTexte_background"
+                    android:hint="@string/ask_budget"
+                    android:layout_marginBottom="8dp"/>
+
+                <CheckBox
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:hint="Entrer votre budget"/>
+                    android:text="@string/check_appartment"
+                    android:textSize="20sp"
+                    android:textColor="@color/white"
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="8dp"/>
+
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/check_house"
+                    android:textSize="20sp"
+                    android:textColor="@color/white"
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="8dp"/>
+
+
+                <Button
+                    android:id="@+id/searchButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/button_search"
+                    android:textSize="20sp"
+                    android:textColor="@color/white"
+                    android:layout_gravity="center"
+                    android:backgroundTint="@color/blue"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="16dp"/>
 
         </LinearLayout>
 
