--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,17 @@
                 android:layout_gravity="center"
                 android:layout_marginStart="16dp"/>
 
+                <Button
+                    android:id="@+id/mapButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="GPS"
+                    android:textSize="20sp"
+                    android:textColor="@color/white"
+                    android:layout_gravity="center"
+                    android:backgroundTint="@color/blue2"
+                    android:layout_marginStart="16dp"/>
+
         </LinearLayout>
 
         <LinearLayout
@@ -33,7 +44,7 @@
             android:layout_width="380dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:background="@color/blue2"
+            android:background="@color/blue"
             android:layout_marginTop="25dp"
             app:layout_constraintTop_toBottomOf="@id/topbar"
             app:layout_constraintStart_toStartOf="parent"
@@ -66,7 +77,7 @@
                     android:layout_gravity="center"
                     android:autofillHints="localisation"
                     android:inputType="text"
-                    android:background="@drawable/editTexte_background"
+                    android:background="@drawable/edit_texte_background"
                     android:hint="@string/ask_location"
                     android:layout_marginBottom="8dp"/>
 
@@ -88,7 +99,7 @@
                     android:layout_gravity="center"
                     android:autofillHints="budget"
                     android:inputType="number"
-                    android:background="@drawable/editTexte_background"
+                    android:background="@drawable/edit_texte_background"
                     android:hint="@string/ask_budget"
                     android:layout_marginBottom="8dp"/>
 
@@ -119,7 +130,7 @@
                     android:textSize="20sp"
                     android:textColor="@color/white"
                     android:layout_gravity="center"
-                    android:backgroundTint="@color/blue"
+                    android:backgroundTint="@color/blue2"
                     android:layout_marginTop="16dp"
                     android:layout_marginBottom="16dp"/>
 
