--- a/app/src/main/res/layout/house_activity.xml
+++ b/app/src/main/res/layout/house_activity.xml
@@ -7,7 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="240dp"
-        android:background="@drawable/tante">
+        android:background="@drawable/tente">
 
         <Button
             android:id="@+id/slide_left"
