--- a/app/src/main/res/layout/house_activity.xml
+++ b/app/src/main/res/layout/house_activity.xml
@@ -49,7 +49,9 @@
             android:layout_marginTop="100dp"
             android:backgroundTint="#0CA4D3"
             android:text=""
-            android:alpha="0.8"/>
+            android:alpha="0.8"
+            android:background="@drawable/fleche_gauche"
+            />
 
         <Button
             android:id="@+id/slide_right"
@@ -59,7 +61,9 @@
             android:layout_marginTop="100dp"
             android:backgroundTint="#0CA4D3"
             android:text=""
-            android:alpha="0.8"/>
+            android:alpha="0.8"
+            android:background="@drawable/fleche_droite"
+            />
 
     </LinearLayout>
 
