--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,12 +39,25 @@
             android:textSize="20sp"
             android:textColor="@color/white"
             android:backgroundTint="@color/blue2"
-            android:layout_marginEnd="10dp"
+            android:layout_marginEnd="80dp"
             app:layout_constraintTop_toTopOf="@id/topbar"
             app:layout_constraintBottom_toBottomOf="@+id/topbar"
             app:layout_constraintEnd_toEndOf="parent"
             />
 
+
+        <ImageButton
+            android:id="@+id/profileButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:background="@color/blue"
+            android:src="@drawable/profile"
+            android:layout_marginStart="10dp"
+            app:layout_constraintBottom_toBottomOf="@+id/topbar"
+            app:layout_constraintStart_toEndOf="@id/mapButton"
+            app:layout_constraintTop_toTopOf="@id/topbar"
+            />
 
         <View
             android:id="@+id/form"
