--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,116 +10,108 @@
         android:id="@+id/topbar"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@color/blue"
         android:orientation="horizontal"
-        android:background="@color/blue">
-    </View>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"></View>
+
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:fontFamily="sans-serif-medium"
         android:text="@string/myapp"
         android:textColor="@color/white"
         android:textSize="24sp"
-        android:fontFamily="sans-serif-medium"
-        android:layout_marginStart="10dp"
-        app:layout_constraintTop_toTopOf="@id/topbar"
         app:layout_constraintBottom_toBottomOf="@+id/topbar"
         app:layout_constraintStart_toStartOf="parent"
-        />
-
-
-
+        app:layout_constraintTop_toTopOf="@id/topbar" />
 
 
     <TextView
         android:id="@+id/titleLogement"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/connexion"
-        android:textSize="24sp"
-        android:textColor="@color/black"
         android:layout_gravity="center"
         android:layout_marginTop="35dp"
         android:layout_marginBottom="20dp"
-        app:layout_constraintTop_toBottomOf="@id/topbar"
-        app:layout_constraintStart_toStartOf="@id/topbar"
+        android:fontFamily="sans-serif-medium"
+        android:text="@string/connexion"
+        android:textColor="@color/black"
+        android:textSize="26sp"
         app:layout_constraintEnd_toEndOf="@id/topbar"
-        />
+        app:layout_constraintStart_toStartOf="@id/topbar"
+        app:layout_constraintTop_toBottomOf="@id/topbar" />
 
     <TextView
         android:id="@+id/titleLocation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="85dp"
+        android:layout_marginTop="25dp"
         android:text="@string/email"
-        android:textSize="20sp"
         android:textColor="@color/black"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="120dp"
-        app:layout_constraintTop_toBottomOf="@id/titleLogement"
-        app:layout_constraintEnd_toEndOf="@id/titleLogement"
-
-        />
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="@id/topbar"
+        app:layout_constraintTop_toBottomOf="@id/titleLogement" />
 
     <EditText
         android:id="@+id/email"
         android:layout_width="250dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:autofillHints="email"
-        android:inputType="textEmailAddress"
         android:background="@drawable/edittextebackground"
         android:hint="@string/email"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="5dp"
-        app:layout_constraintTop_toBottomOf="@+id/titleLocation"
+        android:inputType="textEmailAddress"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@+id/titleLocation" />
 
     <TextView
         android:id="@+id/mdp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/mot_de_passe"
-        android:textSize="20sp"
-        android:textColor="@color/black"
         android:layout_marginTop="15dp"
-        app:layout_constraintTop_toBottomOf="@+id/email"
+        android:text="@string/mot_de_passe"
+        android:textColor="@color/black"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="@id/titleLocation"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/email" />
 
     <EditText
         android:id="@+id/password"
         android:layout_width="250dp"
         android:layout_height="50dp"
+        android:layout_marginTop="8dp"
         android:layout_gravity="center"
         android:autofillHints="mot de passe"
-        android:inputType="textPassword"
         android:background="@drawable/edittextebackground"
         android:hint="@string/mot_de_passe"
-        app:layout_constraintTop_toBottomOf="@+id/mdp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/mdp" />
 
 
     <Button
         android:id="@+id/connexion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/se_connecter"
-        android:textSize="20sp"
-        android:textColor="@color/white"
         android:layout_gravity="center"
-        android:backgroundTint="@color/blue2"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/password"
-        app:layout_constraintStart_toStartOf="parent"
+        android:backgroundTint="@color/blue2"
+        android:text="@string/se_connecter"
+        android:textColor="@color/white"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/password" />
 
     <TextView
         android:id="@+id/pasDeCompte"
@@ -134,7 +125,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/connexion" />
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
