--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,14 +31,13 @@
             app:layout_constraintStart_toStartOf="parent"
             />
 
-        <Button
+        <ImageButton
             android:id="@+id/mapButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="GPS"
-            android:textSize="20sp"
+            android:background="@color/blue"
+            android:src="@drawable/loc"
             android:textColor="@color/white"
-            android:backgroundTint="@color/blue2"
             android:layout_marginEnd="80dp"
             app:layout_constraintTop_toTopOf="@id/topbar"
             app:layout_constraintBottom_toBottomOf="@+id/topbar"
@@ -153,6 +152,7 @@
 
 
                 <CheckBox
+                    android:id="@+id/checkAppartment"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/check_appartment"
@@ -161,6 +161,7 @@
                     android:layout_gravity="center"/>
 
                 <CheckBox
+                    android:id="@+id/checkHouse"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/check_house"
@@ -170,6 +171,7 @@
                     android:layout_marginStart="16dp"/>
 
                 <CheckBox
+                    android:id="@+id/checkAbris"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Abris"
