--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -28,14 +28,13 @@
         app:layout_constraintStart_toStartOf="parent"
         />
 
-    <Button
+    <ImageButton
         android:id="@+id/mapButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="GPS"
-        android:textSize="20sp"
+        android:background="@color/blue"
+        android:src="@drawable/loc"
         android:textColor="@color/white"
-        android:backgroundTint="@color/blue2"
         android:layout_marginEnd="80dp"
         app:layout_constraintTop_toTopOf="@id/topbar"
         app:layout_constraintBottom_toBottomOf="@+id/topbar"
