--- a/app/src/main/res/layout/activity_one_house.xml
+++ b/app/src/main/res/layout/activity_one_house.xml
@@ -47,7 +47,17 @@
                 android:layout_height="wrap_content"
                 android:scaleX="0.5"
                 android:scaleY="0.5"
-                android:numStars="5" />
+                android:numStars="5"
+                android:layout_marginStart="5dp"/>
+
+            <TextView
+                android:id="@+id/valMaison"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="24sp"
+                android:text="0"
+                android:layout_marginTop="10dp"
+                />
 
 
         </LinearLayout>
