couleur ratingbar et alertedialog

--- a/app/src/main/res/layout/activity_one_house.xml
+++ b/app/src/main/res/layout/activity_one_house.xml
@@ -48,6 +48,8 @@
                 android:scaleX="0.5"
                 android:scaleY="0.5"
                 android:numStars="5"
+                android:progressTint="@color/yellow"
+                android:backgroundTint="@color/black"
                 android:layout_marginStart="5dp"/>
 
             <TextView
