--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="blue">#206483</color>
     <color name="blue2">#2A3380</color>
     <color name="gray" >#808080</color>
+    <color name="yellow">#FFFFD700</color>
 </resources>
