--- a/app/src/main/res/layout/activity_one_house.xml
+++ b/app/src/main/res/layout/activity_one_house.xml
@@ -31,7 +31,8 @@
             android:layout_height="wrap_content"
             android:textSize="24sp"
             android:text="@string/name"
-            android:layout_gravity="center_horizontal"/>
+            android:layout_gravity="center_horizontal"
+            android:textColor="@color/white"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -59,6 +60,7 @@
                 android:textSize="24sp"
                 android:text="0"
                 android:layout_marginTop="10dp"
+                android:textColor="@color/white"
                 />
 
 
