--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -18,4 +18,20 @@
         app:layout_constraintDimensionRatio="1:1">
     </ImageView>
 
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="@string/myapp"
+        android:textColor="@color/blue"
+        android:textSize="34sp"
+        android:fontFamily="sans-serif-medium"
+        android:layout_marginStart="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/house"
+        android:translationY="-1000dp"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
