DINGUE DE TOI NABINABILA

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -65,7 +65,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:autofillHints="email"
-        android:background="@drawable/edittextebackground"
+        android:background="@color/blue"
         android:hint="@string/email"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
@@ -90,7 +90,7 @@
         android:layout_marginTop="8dp"
         android:layout_gravity="center"
         android:autofillHints="mot de passe"
-        android:background="@drawable/edittextebackground"
+        android:background="@color/blue"
         android:hint="@string/mot_de_passe"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
