--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -70,7 +70,7 @@
         android:layout_gravity="center"
         android:autofillHints="email"
         android:inputType="textEmailAddress"
-        android:background="@drawable/edittextebackground"
+        android:background="@color/blue"
         android:hint="@string/email"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
@@ -98,7 +98,7 @@
         android:layout_gravity="center"
         android:autofillHints="mot de passe"
         android:inputType="textPassword"
-        android:background="@drawable/edittextebackground"
+        android:background="@color/blue"
         android:hint="@string/mot_de_passe"
         app:layout_constraintTop_toBottomOf="@+id/mdp"
         app:layout_constraintStart_toStartOf="parent"
