--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -69,7 +69,7 @@
         android:layout_gravity="center"
         android:autofillHints="email"
         android:inputType="textEmailAddress"
-        android:background="@drawable/edittextebackground"
+        android:background="@color/white"
         android:hint="@string/email"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="5dp"
@@ -96,7 +96,7 @@
         android:layout_gravity="center"
         android:autofillHints="mot de passe"
         android:inputType="textPassword"
-        android:background="@drawable/edittextebackground"
+        android:background="@color/white"
         android:hint="@string/mot_de_passe"
         android:layout_marginStart="10dp"
         app:layout_constraintTop_toBottomOf="@+id/mdp"
