--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,12 +60,11 @@
 
         <View
             android:id="@+id/form"
-            android:layout_width="380dp"
-            android:layout_height="380dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:background="@color/blue"
-            android:layout_marginTop="25dp"
-            app:layout_constraintTop_toBottomOf="@id/topbar"
+            app:layout_constraintTop_toBottomOf="@+id/topbar"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
@@ -104,7 +103,7 @@
             android:layout_gravity="center"
             android:autofillHints="localisation"
             android:inputType="text"
-            android:background="@drawable/edittextebackground"
+            android:background="@color/white"
             android:hint="@string/ask_location"
             android:layout_marginBottom="8dp"
             android:layout_marginTop="5dp"
@@ -131,7 +130,7 @@
             android:layout_gravity="center"
             android:autofillHints="budget"
             android:inputType="number"
-            android:background="@drawable/edittextebackground"
+            android:background="@color/white"
             android:hint="@string/ask_budget"
             app:layout_constraintTop_toBottomOf="@+id/titleBudget"
             app:layout_constraintStart_toStartOf="@id/form"
