--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -25,7 +25,6 @@
             android:layout_gravity="center"
             android:layout_marginStart="16dp"/>
 
-
         <ImageButton
             android:id="@+id/profileButton"
             android:layout_width="wrap_content"
@@ -34,10 +33,7 @@
             android:background="@color/blue"
             android:src="@drawable/profile"
             android:layout_marginStart="10dp"
-            android:layout_gravity="center"
-
-            />
-
+            android:layout_gravity="center" />
     </LinearLayout>
 
     <org.osmdroid.views.MapView
@@ -45,6 +41,5 @@
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         />
-
 
 </LinearLayout>
